Bug fix gradient background, by adding min-height instead of set height, renamed classes to more logical names, removed unnecessary white space, add alt to image attribute, fixed unclosed footer

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,11 +2,11 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Chicle&family=Ubuntu&display=swap');
 
-
-body {
+html {
+  min-height: 100%;
   background-color: #f1dec2;
   background-image: linear-gradient(135deg, #f1dec2 0%, #f3bea2 30%, #efaa9c 41%, #de5959 75%);
-  height: 1500px;
+  background-repeat:no-repeat;
   font-family: 'Ubuntu', sans-serif;
   color: #212121;
 }
@@ -20,8 +20,12 @@ header {
   z-index: 5;
 }
 
-.headers{
-  margin-top: 100px;
+.top-margins{
+  margin-top: 75px;
+}
+
+.bottom-margins {
+  margin-bottom: 125px;
 }
 
 .flashes h4 {
@@ -167,9 +171,6 @@ input[type=password]:not(.browser-default):focus:not([readonly])+label {
 
 /* ------------------ Media queries ------------------- */
 @media only screen and (max-width : 1023.98px) {
-  body {
-    height: 1366px;
-  }
   header, main, footer {
     padding-left: 0;
   }
@@ -198,9 +199,6 @@ input[type=password]:not(.browser-default):focus:not([readonly])+label {
 }
 
 @media only screen and (max-width : 414px) {
-  body {
-    height: 1250px;
-  }
   .register {
     height: 736px;
   }
